Fix image generation, auth flow, and scrolling issues
- Updated GeminiService to use gemini-2.0-flash-exp with image generation (matching ripple-backend approach)
- Added member photo references to image generation requests
- Fixed auth flow: auto-create profiles, improved session handling
- Fixed scrolling across all views (ScrollView improvements)
- Fixed member selection priority: manual > AI parsing > all members
- Added comprehensive debug logging
- Updated RLS policies and storage setup
- Fixed various compilation errors and warnings

--- a/project.yml
+++ b/project.yml
@@ -13,6 +13,9 @@ targets:
     deploymentTarget: "17.0"
     sources:
       - path: SharedVisions/SharedVisions
+        excludes:
+          - "**/*.md"
+          - "**/Resources/**"
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: com.rohanseth.SharedVisions
       PRODUCT_NAME: SharedVisions
@@ -22,7 +25,9 @@ targets:
       ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
     dependencies:
       - package: supabase-swift
+        product: Supabase
       - package: google-generative-ai-swift
+        product: GoogleGenerativeAI
 
 packages:
   supabase-swift:
