--- a/.gitignore
+++ b/.gitignore
@@ -1,105 +1,26 @@
 # Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
-
-## User settings
-xcuserdata/
-
-## Compatibility with Xcode 8 and earlier (Xcode 8 includes Xcode 9 format)
-*.xcscmblueprint
-*.xccheckout
-
-## Xcode patch
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
-!*.xcodeproj/project.xcworkspace/
-*.xcworkspace/*
-!*.xcworkspace/contents.xcworkspacedata
-!*.xcworkspace/xcshareddata/
-
-## Build generated
-build/
-DerivedData/
-
-## Various settings
-*.moved-aside
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
 *.xcuserstate
+*.xcworkspace
+xcuserdata/
+DerivedData/
+build/
+*.xcodeproj/
+*.xcworkspace/
 
-## Other
-*.xccheckout
-*.hmap
-*.ipa
-*.dSYM.zip
-*.dSYM
+# Secrets - NEVER commit API keys
+**/Secrets.swift
+Secrets.example.swift
 
-## Playgrounds
-timeline.xctimeline
-playground.xcworkspace
+# OS
+.DS_Store
+**/.DS_Store
 
 # Swift Package Manager
 .build/
 .swiftpm/
-Package.resolved
 
-# CocoaPods
-Pods/
-!Podfile.lock
-
-# Carthage
-Carthage/Build/
-
-# Accio dependency management
-Dependencies/
-.accio/
-
-# fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots/**/*.png
-fastlane/test_output
-
-# Code Injection
-iOSInjectionProject/
-
-# Secrets - IMPORTANT: Never commit API keys
-**/Secrets.swift
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# IDE
-.idea/
+# Temporary files
 *.swp
 *.swo
 *~
-
-# Environment
-.env
-.env.local
-.env.*.local
-
-# Logs
-*.log
-logs/
-
-# Test coverage
-coverage/
-*.gcov
-*.gcda
-*.gcno
 
